--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,19 @@
 [build]
+  command = "npm install && npm run build"
   publish = "."
-  command = "echo 'Static site - no build needed'"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-[build.environment]
-  NODE_VERSION = "18"
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
