--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "simple-signaling-server.js",
   "scripts": {
     "start": "node simple-signaling-server.js",
-    "dev": "node simple-signaling-server.js"
+    "dev": "node simple-signaling-server.js",
+    "build": "echo 'Static build - no build step needed'"
   },
   "dependencies": {
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "socket.io": "^4.7.4"
   },
   "engines": {
     "node": ">=18.0.0"
